# local-vs-api

./: README.md  pyproject.toml
examples/: scenario_api.yaml  scenario_local.json
src/llm_selection/: __init__.py  calculator.py  cli.py  config_loader.py  constants.py  models.py
tests/: conftest.py  test_calculator.py  test_cli.py  test_config_loader.py  test_models.py
