[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-selection-tool"
version = "0.1.0"
description = "LLM选型对比工具 - 本地模型 vs API模型"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
llm-compare = "llm_selection.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_selection"]
